fix contact form

--- a/contact.html
+++ b/contact.html
@@ -139,11 +139,11 @@
                         </table>
                     </div>
                     <div class="col" style="align-content:center;justify-content:center;display:flex">
-                        <form class="contact-form" action="https://api.staticforms.xyz/submit" method="POST"><label
-                                for="firstname">NAME:</label><br /><input type="text" id="name" name="name"
-                                placeholder="Type Name Here..." required="" value="" /><br /><br /><label
-                                for="email">EMAIL:</label><br /><input type="email" id="email" name="email"
-                                placeholder="Email..." required="" value="" /><br /><br /><label
+                        <form class="contact-form" action='https://api.staticforms.xyz/submit' method='POST'
+                            onsubmit="return handleSubmit(event)"><label for="firstname">NAME:</label><br /><input
+                                type="text" id="name" name="name" placeholder="Type Name Here..." required=""
+                                value="" /><br /><br /><label for="email">EMAIL:</label><br /><input type="email"
+                                id="email" name="email" placeholder="Email..." required="" value="" /><br /><br /><label
                                 for="subject">SUBJECT:</label><br /><input type="text" id="subject" name="subject"
                                 placeholder="Subject..." required="" value="" /><br /><br /><label
                                 for="message">MESSAGE:</label><br /><textarea name="message" id="user-message"
