trying to make all the necessary updates

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                     <li class="tab"><a id="Events" class="tab-label" href="/events.html">Events</a></li>
                     <li class="tab"><a id="Seasons" class="tab-label" href="/seasons.html">Seasons</a></li>
                     <li class="tab"><a id="Resources" class="tab-label" href="/resources.html">Resources</a></li>
-                    <li class="tab"><a id="Contact" class="tab-label" href="/contact.html">Contact</a></li>
+                    <li class="tab"><a id="Contact" class="tab-label this-page" href="/contact.html">Contact</a></li>
                     <li class="toggle" style="padding:5px;padding-bottom:10px;margin-right:10px"><span class="bars"><svg
                                 aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars"
                                 class="svg-inline--fa fa-bars " role="img" xmlns="http://www.w3.org/2000/svg"
