--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
                                 height="45px" /></a></li>
                     <li class="tab"><a id="Home" class="tab-label" href="/">Home</a></li>
                     <li class="tab"><a id="About" class="tab-label" href="/about.html">About</a></li>
-                    <li class="tab"><a id="Events" class="tab-label" href="/events.html">Events</a></li>
+                    <li class="tab"><a id="Events" class="tab-label this-page" href="/events.html">Events</a></li>
                     <li class="tab"><a id="Seasons" class="tab-label" href="/seasons.html">Seasons</a></li>
                     <li class="tab"><a id="Resources" class="tab-label" href="/resources.html">Resources</a></li>
                     <li class="tab"><a id="Contact" class="tab-label" href="/contact.html">Contact</a></li>
