change the image

--- a/404.html
+++ b/404.html
@@ -75,18 +75,18 @@
                 <p>Here are some pages you can check out:</p>
                 <div style="display:flex;align-items:center;justify-content:center">
                     <ul style="text-align:left">
-                        <li class="tab"><a id="Home" class="tab-label" href="https://ftc18225.everstem.org/">Home</a>
+                        <li class="tab"><a id="Home" class="tab-label" href="https://highdefwebtesting.vercel.app">Home</a>
                         </li>
                         <li class="tab"><a id="About" class="tab-label"
-                                href="https://ftc18225.everstem.org/about.html">About</a></li>
+                                href="https://highdefwebtesting.vercel.appabout.html">About</a></li>
                         <li class="tab"><a id="Events" class="tab-label"
-                                href="https://ftc18225.everstem.org/events.html">Events</a></li>
+                                href="https://highdefwebtesting.vercel.appevents.html">Events</a></li>
                         <li class="tab"><a id="Seasons" class="tab-label"
-                                href="https://ftc18225.everstem.org/seasons.html">Seasons</a></li>
+                                href="https://highdefwebtesting.vercel.appseasons.html">Seasons</a></li>
                         <li class="tab"><a id="Resources" class="tab-label"
-                                href="https://ftc18225.everstem.org/resources.html">Resources</a></li>
+                                href="https://highdefwebtesting.vercel.appresources.html">Resources</a></li>
                         <li class="tab"><a id="Contact" class="tab-label"
-                                href="https://ftc18225.everstem.org/contact.html">Contact</a></li>
+                                href="https://highdefwebtesting.vercel.appcontact.html">Contact</a></li>
                     </ul>
                 </div>
             </div>
