--- a/about/freight-frenzy.html
+++ b/about/freight-frenzy.html
@@ -295,25 +295,25 @@
                     <hr style="width:300px" />
                     <div class="teamhighlights grid">
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.org/images/worldrobotrevealthumbnail.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://highdefwebtesting.vercel.appimages/worldrobotrevealthumbnail.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=Bo4R6sHHHWY">
                                 <h3>FTC 18225 World Robot Reveal</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.org/images/VISIONARY.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://highdefwebtesting.vercel.appimages/VISIONARY.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=VaWNdEoWUtE">
                                 <h3>World Championship Robot Reveal Trailer</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.org/images/controlthumbnail.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://highdefwebtesting.vercel.appimages/controlthumbnail.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=UlNMlCkZbEQ">
                                 <h3>Washington State Control Award Video</h3>
                             </a>
                         </div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.org/images/robotskeleton.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://highdefwebtesting.vercel.appimages/robotskeleton.jpg);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://tinyurl.com/FTC18225StateRobot">
                                 <h3>Washington State Freight Frenzy Robot CAD</h3>
                             </a>
@@ -328,64 +328,64 @@
                     <hr style="width:300px" />
                     <div>
                         <div style="display: flex; flex-flow: wrap;">
-                            <img src="https://drive.usercontent.google.com/download?id=19qxmeBZqmIU4DqapqZ-asCH0ZI0PmXjl&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=19qxmeBZqmIU4DqapqZ-asCH0ZI0PmXjl&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1kiPlmSqABh5b2tgAabVo63gGRBy-880M&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1kiPlmSqABh5b2tgAabVo63gGRBy-880M&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=10N0QTdJ1niOvFId6FJhAre1gFXqg2Klp&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=10N0QTdJ1niOvFId6FJhAre1gFXqg2Klp&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1AczoxNcVOqfEgtFM2NIGlSxyPfuP1WXf&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1AczoxNcVOqfEgtFM2NIGlSxyPfuP1WXf&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=16iBRlSuusuQWWdc7n4zN_4EjrA_qp3j1&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=16iBRlSuusuQWWdc7n4zN_4EjrA_qp3j1&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1YuDu00SGYjAseZcK8xndL71J6Vvdljdn&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1YuDu00SGYjAseZcK8xndL71J6Vvdljdn&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=19YApSunLS6OIn4wC9_qdzggmMAJZ6yMz&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=19YApSunLS6OIn4wC9_qdzggmMAJZ6yMz&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1TYXiRAL0BbwZXlTpLPBLdMoiA4Su9YOZ&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1TYXiRAL0BbwZXlTpLPBLdMoiA4Su9YOZ&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1wNG5X3qdwPMo32vqp7EdiW7yGvuMb87P&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1wNG5X3qdwPMo32vqp7EdiW7yGvuMb87P&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1o3TPM9Jbg0MYlQyf7FUq9VEGXAUSjfLN&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1o3TPM9Jbg0MYlQyf7FUq9VEGXAUSjfLN&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1_gf1M7m4ni9oMsbZSBrKknJm0c3UKBEl&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1_gf1M7m4ni9oMsbZSBrKknJm0c3UKBEl&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1kEg5G1yAOezO3Smg8onx7d9Mn-A6eRQu&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1kEg5G1yAOezO3Smg8onx7d9Mn-A6eRQu&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1WL8YXLPc2lEKiCXbfmBeniBDz087Gpxe&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1WL8YXLPc2lEKiCXbfmBeniBDz087Gpxe&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1dcduMy020F2y8SCZ24fLl-DVxZqul0Sf&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1dcduMy020F2y8SCZ24fLl-DVxZqul0Sf&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=16AO0Oqap6MoZS_jZWV2KfoniDk8qgCnB&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=16AO0Oqap6MoZS_jZWV2KfoniDk8qgCnB&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1cwC2bHPXyzIVvmpOTfGwjciGLWL9aRC-&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1cwC2bHPXyzIVvmpOTfGwjciGLWL9aRC-&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1Hf9Y5vssA4KLeP1k4mGZA9JqNJE0m-cr&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1Hf9Y5vssA4KLeP1k4mGZA9JqNJE0m-cr&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1fn4PqBO2hwd4jVn1DEN4EeXXdhaX1LzW&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1fn4PqBO2hwd4jVn1DEN4EeXXdhaX1LzW&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1VfCbue92A9EDRuAi7Jkh-7cmgomYQX7P&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1VfCbue92A9EDRuAi7Jkh-7cmgomYQX7P&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1KQt53ADSeLs1TooP2kZLTsrVIEL17ILC&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1KQt53ADSeLs1TooP2kZLTsrVIEL17ILC&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=17Em4HE3xsWYtiMjLhPUNAzJk5BErficy&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=17Em4HE3xsWYtiMjLhPUNAzJk5BErficy&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1wKvty2CRzpUnNKwWKQnNpmAdQNc2y0L_&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1wKvty2CRzpUnNKwWKQnNpmAdQNc2y0L_&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1R56XOd2xthCgBYBMBDUvQXOb-pyBsoK5&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1R56XOd2xthCgBYBMBDUvQXOb-pyBsoK5&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1asJoPEA63zG4syGieA2G1dZGxEmPVX8Y&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1asJoPEA63zG4syGieA2G1dZGxEmPVX8Y&sz=w1000"
                                 height="269.6666666666667" width="269.7" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1hgf2l6-rEuval20el9X0iOR0uqe5th2m&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1hgf2l6-rEuval20el9X0iOR0uqe5th2m&sz=w1000"
                                 height="201.25" width="201.3" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1YEomn1oFOPakWkBEHC8SM-f1Yh-qdeuj&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1YEomn1oFOPakWkBEHC8SM-f1Yh-qdeuj&sz=w1000"
                                 height="201.25" width="201.3" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=17XcLOfWgnui08mz0IOdD7EWmNjho-YQ3&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=17XcLOfWgnui08mz0IOdD7EWmNjho-YQ3&sz=w1000"
                                 height="201.25" width="201.3" style="margin: 2px; display: block;">
-                            <img src="https://drive.usercontent.google.com/download?id=1ShacQP5pHH49TrD9liC3Jw_wHcwshqdl&export=view&authuser=0"
+                            <img src="https://drive.google.com/thumbnail?id=1ShacQP5pHH49TrD9liC3Jw_wHcwshqdl&sz=w1000"
                                 height="201.25" width="201.3" style="margin: 2px; display: block;">
                         </div>
-                    </div>                    
+                    </div>
                 </div>
             </div>
         </div>
