--- a/about/ultimate-goal.html
+++ b/about/ultimate-goal.html
@@ -237,22 +237,22 @@
                     <hr style="width:300px" />
                     <div class="teamhighlights grid">
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.org/images/seasons/ultimategoal/scorpionv3.png);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://highdefwebtesting.vercel.appimages/seasons/ultimategoal/scorpionv3.png);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=Fn46jRJG2Es">
                                 <h3>Scorpion CAD Version 3</h3>
                             </a></div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.org/images/seasons/ultimategoal/intake.png);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://highdefwebtesting.vercel.appimages/seasons/ultimategoal/intake.png);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=eL6ZAtWQX9g">
                                 <h3>Simplest Ring Intake Subsystem</h3>
                             </a></div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.org/images/seasons/ultimategoal/statecontrol.png);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://highdefwebtesting.vercel.appimages/seasons/ultimategoal/statecontrol.png);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=vkxp2Lw1z80">
                                 <h3>State Control Award Video</h3>
                             </a></div>
                         <div class="col"
-                            style="background-image:url(https://ftc18225.everstem.org/images/seasons/ultimategoal/interleaguecontrol.png);background-position:top center;background-attachment:fixed;background-size:contain">
+                            style="background-image:url(https://highdefwebtesting.vercel.appimages/seasons/ultimategoal/interleaguecontrol.png);background-position:top center;background-attachment:fixed;background-size:contain">
                             <a href="https://www.youtube.com/watch?v=tQRB3qGeSY8">
                                 <h3>Interleague Control Award Video</h3>
                             </a></div>
