--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                                 future! We spread mechanical, programming, business, and other practices within the
                                 community to ensure their success.</p>
                             <div style="display:flex;justify-content:center;align-items:center"><a class="purplebutton"
-                                    href="https://ftc18225.everstem.org/about">Learn More</a></div>
+                                    href="https://highdefwebtesting.vercel.appabout">Learn More</a></div>
                         </div>
                     </div>
                 </div>
@@ -177,7 +177,7 @@
                     </h1>
                     <hr style="width:300px" />
                     <p>Thank you to our sponsors for supporting our team and helping us learn.</p>
-                    <div> </div>
+                    <div class="react-photo-gallery--gallery"><div style="position: relative; height: 207.2px;"><img src="/images/sponsors/adobe.png" width="132.8" height="132.8" style="margin: 2px; display: block; position: absolute; left: 0px; top: 0px;"><img src="/images/sponsors/boeing.png" width="132.8" height="132.8" style="margin: 2px; display: block; position: absolute; left: 136.8px; top: 0px;"><img src="/images/sponsors/digipen.png" width="132.8" height="132.8" style="margin: 2px; display: block; position: absolute; left: 273.7px; top: 0px;"><img src="/images/sponsors/google.png" width="132.8" height="132.8" style="margin: 2px; display: block; position: absolute; left: 410.5px; top: 0px;"><img src="/images/sponsors/microsoft.png" width="132.8" height="132.8" style="margin: 2px; display: block; position: absolute; left: 547.3px; top: 0px;"><img src="/images/sponsors/pactrans.png" width="132.8" height="132.8" style="margin: 2px; display: block; position: absolute; left: 684.2px; top: 0px;"><img src="/images/sponsors/protocase.png" width="132.8" height="66.4" style="margin: 2px; display: block; position: absolute; left: 0px; top: 136.8px;"><img src="/images/sponsors/xcamp.gif" width="132.8" height="66.4" style="margin: 2px; display: block; position: absolute; left: 136.8px; top: 136.8px;"></div></div>
                 </div>
             </div>
         </div>
