remove the fade

--- a/events.html
+++ b/events.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="Events">
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Upcoming
                         or Current Events</h1>
@@ -83,7 +83,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Noteable
                         Past Events</h1>
