--- a/seasons.html
+++ b/seasons.html
@@ -80,7 +80,7 @@
                 <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Center Stage:
                     2023 - 2024</h1>
                 <hr style="width:300px" />
-                <div class="fade ">
+                <div >
                     <div class="collapsible">
                         <div class="header" id=":R9a6:-toggle" aria-controls=":R9a6:" aria-expanded="true" role="button"
                             tabindex="0">
@@ -181,7 +181,7 @@
                 <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Power Play:
                     2022 - 2023</h1>
                 <hr style="width:300px" />
-                <div class="fade ">
+                <div >
                     <div class="collapsible">
                         <div class="header" id=":R9a6:-toggle" aria-controls=":R9a6:" aria-expanded="true" role="button"
                             tabindex="0">
@@ -348,7 +348,7 @@
                 <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Freight
                     Frenzy: 2021 - 2022</h1>
                 <hr style="width:300px" />
-                <div class="fade ">
+                <div >
                     <div class="collapsible">
                         <div class="header" id=":R9q6:-toggle" aria-controls=":R9q6:" aria-expanded="true" role="button"
                             tabindex="0">
@@ -506,7 +506,7 @@
                     </div>
                     <div id=":Rdq6:" aria-hidden="true" style="box-sizing:border-box" role="region">
                         <div class="content">
-                            <div class="fade ">
+                            <div >
                                 <div class="seasongrid grid">
                                     <div class="grid-item">
                                         <div class="collapsible">
@@ -659,7 +659,7 @@
                 <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Ultimate Goal:
                     2020 - 2021</h1>
                 <hr style="width:300px" />
-                <div class="fade ">
+                <div >
                     <div class="collapsible">
                         <div class="header" id=":Raa6:-toggle" aria-controls=":Raa6:" aria-expanded="true" role="button"
                             tabindex="0">
@@ -817,7 +817,7 @@
                     </div>
                     <div id=":Rea6:" aria-hidden="true" style="box-sizing:border-box" role="region">
                         <div class="content">
-                            <div class="fade ">
+                            <div >
                                 <div class="seasongrid grid">
                                     <div class="grid-item">
                                         <div class="collapsible">
