--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                     style="display:flex;align-items:center;margin-right:15px;justify-content:center">2020-2021</a><a
                     class="purplebutton" href="/about/alumni.html"
                     style="display:flex;align-items:center;justify-content:center">Alumni</a></div><br />
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Coaches
                     </h1>
@@ -93,7 +93,6 @@
                             <div class="grid-item">
                                 <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                             decoding="async" data-nimg="fill" class="member"
                                             style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                                 sizes="100vw"
@@ -111,7 +110,6 @@
                             <div class="grid-item">
                                 <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                             decoding="async" data-nimg="fill" class="member"
                                             style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                                 sizes="100vw"
@@ -129,7 +127,6 @@
                             <div class="grid-item">
                                 <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                             decoding="async" data-nimg="fill" class="member"
                                             style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                                 sizes="100vw"
@@ -148,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Mentors
                     </h1>
@@ -158,7 +155,6 @@
                             <div class="grid-item">
                                 <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                             decoding="async" data-nimg="fill" class="member"
                                             style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                                 sizes="100vw"
@@ -175,7 +171,6 @@
                                             style="display:block;max-width:100%;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0"
                                             alt="" aria-hidden="true"
                                             src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27230%27%20height=%27300%27/%3e" /></span><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="intrinsic" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%" /><noscript><img
                                             srcSet="https://highdefwebtesting.vercel.app/images/mentors/patrick.jpg?w=256&amp;q=85 1x, https://highdefwebtesting.vercel.app/images/mentors/patrick.jpg?w=640&amp;q=85 2x"
@@ -191,7 +186,6 @@
                                             style="display:block;max-width:100%;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0"
                                             alt="" aria-hidden="true"
                                             src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27230%27%20height=%27300%27/%3e" /></span><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="intrinsic" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%" /><noscript><img
                                             srcSet="https://highdefwebtesting.vercel.app/images/mentors/shikha.jpg?w=256&amp;q=85 1x, https://highdefwebtesting.vercel.app/images/mentors/shikha.jpg?w=640&amp;q=85 2x"
@@ -205,7 +199,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">The Team
                     </h1>
@@ -214,7 +208,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -231,7 +224,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -249,7 +241,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -266,7 +257,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -283,7 +273,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -301,7 +290,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -318,7 +306,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -336,7 +323,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -355,7 +341,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -372,7 +357,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -389,7 +373,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -406,7 +389,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
@@ -425,7 +407,6 @@
                         <div class="grid-item">
                             <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                     style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
-                                        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                                         decoding="async" data-nimg="fill" class="member"
                                         style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:cover" /><noscript><img
                                             sizes="100vw"
