--- a/about/alumni.html
+++ b/about/alumni.html
@@ -86,7 +86,7 @@
                     style="display:flex;align-items:center;margin-right:15px;justify-content:center">2020-2021</a><a
                     class="purplebutton" href="/about/alumni"
                     style="display:flex;align-items:center;justify-content:center">Alumni</a></div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Alumni
                     </h1>
