--- a/about/freight-frenzy.html
+++ b/about/freight-frenzy.html
@@ -86,7 +86,7 @@
                     style="display:flex;align-items:center;margin-right:15px;justify-content:center">2020-2021</a><a
                     class="purplebutton" href="/about/alumni"
                     style="display:flex;align-items:center;justify-content:center">Alumni</a></div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Coaches
                     </h1>
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Mentors
                     </h1>
@@ -156,7 +156,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">The Team
                     </h1>
@@ -288,7 +288,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Team
                         Highlights</h1>
@@ -321,7 +321,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Photo
                         Gallery</h1>
