--- a/about/power-play.html
+++ b/about/power-play.html
@@ -86,7 +86,7 @@
                     style="display:flex;margin-right:15px;align-items:center;justify-content:center">2020-2021</a><a
                     class="purplebutton" href="/about/alumni"
                     style="display:flex;align-items:center;justify-content:center">Alumni</a></div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Coaches
                     </h1>
@@ -151,7 +151,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Mentors
                     </h1>
@@ -208,7 +208,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">The Team
                     </h1>
@@ -427,7 +427,7 @@
                     </div>
                 </div>
             </div>
-            <div class="fade ">
+            <div >
                 <div class="section">
                     <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Photo
                         Gallery</h1>
