trying to debug seasons

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
                     </h1>
                     <hr style="width:300px" />
                     <div class="flex" style="align-items:center;justify-content:center">
-                        <div class="person-grid grid" id="coach-grid" style="width:75%">
+                        <div class="person-grid grid">
                             <div class="grid-item">
                                 <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
@@ -139,7 +139,7 @@
                     </h1>
                     <hr style="width:300px" />
                     <div class="flex" style="align-items:center;justify-content:center">
-                        <div class="person-grid grid" id="coach-grid" style="width:75%">
+                        <div class="person-grid grid">
                             <div class="grid-item">
                                 <div style="position:relative;margin:auto;width:230px;height:300px"><span
                                         style="box-sizing:border-box;display:block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:absolute;top:0;left:0;bottom:0;right:0"><img
