--- a/seasons.html
+++ b/seasons.html
@@ -80,7 +80,7 @@
                 <h1 style="font-family:Hubballi;font-size:35px;transform:scale(1, 1.3);text-align:center">Center Stage:
                     2023 - 2024</h1>
                 <hr style="width:300px" />
-                <div class="fade ">
+                <div>
                     <div class="collapsible">
                         <div class="header" id=":R9a6:-toggle" aria-controls=":R9a6:" aria-expanded="true" role="button"
                             tabindex="0">
