fix the dropdowns and styling

--- a/events.html
+++ b/events.html
@@ -110,11 +110,12 @@
                         <div class="eventsection">
                             <div class="collapsible">
                                 <div class="toggle-button" id="toggleButton">
-                                    <h4><span class="arrow" id="arrow" style="margin-right: 4px;">▲</span>Connecting with Professionals</h4>
+                                    <h4><span class="arrow" id="arrow" style="margin-right: 4px;">▲</span>Connecting
+                                        with Professionals</h4>
                                 </div>
                                 <div style="box-sizing:border-box">
                                     <div class="content" id="content">
-                                    <div class="content"><br />
+                                        <br />
                                         <ul style="font-weight:300">
                                             <li>Self Taught Airplane Building and Pilot</li>
                                             <li>Wearable Technology Workshop</li>
